# megaengine

./: .gitignore  Cargo.toml  README.md  test_output.txt  分布式p2p网络设计.md
src/: lib.rs  main.rs
src/bundle/: bundle_sync.rs  mod.rs  service.rs  transfer.rs
src/chat/: service.rs
src/cli/: auth.rs  chat.rs  mod.rs  node.rs  repo.rs
src/git/: git_repo.rs  pack.rs
src/gossip/: message.rs  mod.rs  service.rs
src/identity/: keypair.rs
src/mcp/: sse_server.rs
src/node/: mod.rs  node.rs  node_addr.rs  node_id.rs  node_manager.rs
src/repo/: mod.rs  repo.rs  repo_id.rs  repo_manager.rs  repo_sync.rs
src/storage/: mod.rs  node_model.rs  ref_model.rs  repo_model.rs
src/transport/: cert.rs  config.rs  mod.rs  quic.rs
src/util/: mod.rs
tests/: bundle_two_nodes.rs  git_pack.rs  gossip_three_nodes.rs
