[package]
name = "megaengine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
ed25519-dalek = { version = "2.1.1", features = ["rand_core","serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
multibase = "0.9.2"
multihash = "0.9.2"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = "0.23.34"
rustls-pemfile = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
rcgen = "0.13"
